# expense_categorizer

./: .gitignore  Cargo.toml  LICENSE  README.md
exampledata/: Buchungsliste.csv  Rules.yaml
src/: categorizer.rs  lib.rs  main.rs  model.rs  models for parsing  parser.rs
