[package]
name = "expense_categorizer"
version = "0.1.0"
authors = ["Eric Schlarmann <eric.schlarmann@tngtech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
encoding_rs = "0.8.24"
encoding_rs_io = "0.1.7"
chrono = "0.4.15"
num-format = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
itertools = "0.9.0"
currency = "0.4.0"
num = "0.3.1"